--- a/css/style.css
+++ b/css/style.css
@@ -3752,7 +3752,7 @@ margin-left: 1rem;}
  * -----------------------------------------------------------------------------
  */
 .footer {
-  background-color: #00aeef;
+  background-color: #0048ff;
   color: #ffffff;
   background-size: cover;
   background-position: center; }
