--- a/css/style.css
+++ b/css/style.css
@@ -1278,11 +1278,30 @@ ICON 2
   margin-bottom: 15px;
   text-align: center;
   padding: 20px;
-  box-shadow: 0px 0px 10px 2px rgb(34, 53, 85);
+  border: 1px solid #D9EBF3;
+  box-shadow: 1px 1px 8px 4px #DDD;
   height: 100%; 
   transition: .5s ease;
   /*background: #212121 url(../images/net.png) repeat;*/
 }
+
+/*.box-icon-1 h3:before{
+    position: absolute;
+    left: 1.5rem;
+    top: .25rem;
+    content: "■ ";
+    color: #A0C3CC;
+    font-size: .75rem;
+    top: .2rem;
+}
+.box-icon-1 h3:after{
+    position: absolute;
+    right: .5rem;
+    top: .25rem;
+    content: "■ ";
+    color: #A0C3CC;
+    font-size: .75rem;
+}*/
   .box-icon-1 .icon {
     color: #949699;
     display: inline-block;
@@ -1298,8 +1317,8 @@ ICON 2
       bottom: 0;
       top: 0;
       left: 0;
-      background: rgb(0, 0, 0);
-      background: #0048ff;
+      /*background: #0048ff;*/
+      background: linear-gradient(146.92deg,#a8dcea 0,#52bad5 31.79%,#23bdac 72.03%,#02bf8f 100%);
       color: #f1f1f1; 
       width: 100%;
       transition: .5s ease;
@@ -1312,7 +1331,7 @@ ICON 2
 
 .box-icon-1:hover .overlay {
   opacity: 1;
-    box-shadow: 0px 0px 10px 2px transparent;
+  box-shadow: 1px 1px 8px 4px transparent;
 }
 .box-icon-1:hover {
   opacity: 1;
