--- a/css/style.css
+++ b/css/style.css
@@ -1282,7 +1282,7 @@ ICON 2
   box-shadow: 1px 1px 8px 4px #DDD;
   height: 100%; 
   transition: .5s ease;
-  background: linear-gradient(146.92deg,#a8dcea 0,#52bad5 31.79%,#23bdac 72.03%,#02bf8f 100%);
+  background: linear-gradient(146.92deg,#00aeef 0,#00aeef 31.79%,#0048ff 72.03%,#00aeef 100%);
   border-radius: .4rem
 }
 
