--- a/css/style.css
+++ b/css/style.css
@@ -1304,7 +1304,7 @@ ICON 2
     font-size: .75rem;
 }*/
   .box-icon-1 .icon {
-    color: #949699;
+    color: #fff;
     display: inline-block;
     font-size: 42px;
     line-height: 2.2;
