--- a/css/style.css
+++ b/css/style.css
@@ -666,6 +666,7 @@ ul {
   font-family: "Lora", serif; }
 
 .bgi-cover-center {
+  background: linear-gradient(40deg, rgba(67, 138, 243, 0.7), rgba(255, 242, 166, 0.7))
   background-size: cover;
   background-position: center; }
 
@@ -964,6 +965,67 @@ width: -webkit-fill-available;}
     -moz-box-shadow: 4px 5px 30px rgba(0, 0, 0, 0.2);
     box-shadow: 4px 5px 30px rgba(0, 0, 0, 0.2); }
 
+
+    /*!!!!!!!!ATTOERNEY!!!!!!!!!!!!!!*/
+
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 300px;
+  perspective: 1000px;
+
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
+
+
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transform-origin: center right;
+
+}
+
+.flip-card-front {
+  /*background-color: #bbb;*/
+  color: black;
+
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  padding: .5rem .2rem;
+  border-radius: .5rem;
+  color: white;
+  transform: translateX(-100%) rotateY(-180deg);
+}
+.flip-card img{
+  height: 250px;
+}
+.flip-card .btn{
+  padding: 13px 55px !important;
+}
+.flip-card .sosmed-icon{
+  margin-top: 2rem;
+}
+
+
 /* ==========================
 2.1 - Buttons
 ============================= */
@@ -1094,7 +1156,6 @@ SOSMED-ICON
   text-align: center;
   margin: 0; }
   .sosmed-icon a:hover {
-    /*color: $color-body;*/
     background-color: transparent; }
 .sosmed-icon.icon-bg-primary a {
   -webkit-border-radius: 4px;
@@ -1102,7 +1163,6 @@ SOSMED-ICON
   -ms-border-radius: 4px;
   border-radius: 4px;
   color: #ffffff;
-/*  background-color: #00aeef;*/
   margin: 0 2px; }
   .sosmed-icon.icon-bg-primary a:hover {
     color: #223555; }
@@ -2111,7 +2171,7 @@ BLOG
 /* ==========================
 BOX TEAM
 ============================= */
-.rs-team-1 {
+/*.rs-team-1 {
   position: relative;
   margin-bottom: 30px;
   overflow: hidden; }
@@ -2165,7 +2225,7 @@ BOX TEAM
 .rs-team-single .overlap-btn {
   text-align: center;
   position: relative;
-  top: -80px; }
+  top: -80px; }*/
 
 /* ==========================
 BOX ICON
@@ -2921,7 +2981,7 @@ Back To Top Section
     border-radius: .25rem;
 }
 #question{
-  background: #eee;
+  background: linear-gradient(40deg, rgba(67, 138, 243, 0.7), rgba(255, 242, 166, 0.7));
 }
 
 /*!!!!!!!!!!!!!attorney!!!!!!!!!!!!!!!!*/
@@ -3154,7 +3214,7 @@ padding: 2% 20%;
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(34, 34, 34, 0.4);
+    background-color: rgba(21, 21, 42, 0.7);
     z-index: 1; }
   .banner .owl-theme {
     height: 100%; }
