--- a/css/style.css
+++ b/css/style.css
@@ -973,7 +973,7 @@ width: -webkit-fill-available;}
   width: 100%;
   height: 300px;
   perspective: 1000px;
-
+  margin-bottom: 2rem
 }
 
 .flip-card-inner {
@@ -1016,7 +1016,8 @@ width: -webkit-fill-available;}
   transform: translateX(-100%) rotateY(-180deg);
 }
 .flip-card img{
-  height: 250px;
+/*   height: 250px; */
+  box-shadow: 0 0.5em 2em 0 rgba(27,41,42,.25);
 }
 .flip-card .btn{
   padding: 13px 55px !important;
