--- a/css/style.css
+++ b/css/style.css
@@ -973,7 +973,7 @@ width: -webkit-fill-available;}
   width: 100%;
   height: 300px;
   perspective: 1000px;
-  margin-bottom: 2rem
+  margin-bottom: 3rem
 }
 
 .flip-card-inner {
@@ -984,14 +984,17 @@ width: -webkit-fill-available;}
   transition: transform 0.6s;
   transform-style: preserve-3d;
   /*box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);*/
-
-
 }
 
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
-
+  .flip-card-front h6
 }
+.flip-card:hover .flip-card-front h6 {
+  visibility: hidden;
+  
+}
+
 
 .flip-card-front, .flip-card-back {
   position: absolute;
@@ -1008,15 +1011,49 @@ width: -webkit-fill-available;}
 
 }
 
+.flip-card-front h6, {
+  margin: 0;
+  text-transform: uppercase;
+}
+.flip-card-front h6 {
+  font-family: 'Righteous', Arial, sans-serif;
+ /* font-size: 1.8em;*/
+  line-height: 40px;
+  position: relative;
+  background-color: #01aeef;
+  color: #fff;
+  text-align: center;
+  margin: 8px 11px 0px;
+}
+
+.flip-card-front h6:before,
+.flip-card-front h6:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: -3px;
+  border-width: 18px 8px;
+  border-style: solid;
+}
+.flip-card-front h6:before {
+  left: -18px;
+  border-color: #01aeef #01aeef #01aeef transparent;
+}
+.flip-card-front h6:after {
+  right: -18px;
+  border-color: #01aeef transparent #01aeef #01aeef;
+}
+
 .flip-card-back {
   background-color: #1b4196;
-  padding: .5rem .2rem;
+   height: 350px;
+  padding: 1.5rem .2rem;
   border-radius: .5rem;
   color: white;
   transform: translateX(-100%) rotateY(-180deg);
 }
 .flip-card img{
-/*   height: 250px; */
   box-shadow: 0 0.5em 2em 0 rgba(27,41,42,.25);
 }
 .flip-card .btn{
@@ -1024,6 +1061,11 @@ width: -webkit-fill-available;}
 }
 .flip-card .sosmed-icon{
   margin-top: 2rem;
+}
+@media screen and (max-width: 590px) {
+  .flip-card .sosmed-icon{
+  margin: 2rem 2.5rem;
+}
 }
 
 
@@ -1148,8 +1190,8 @@ SOSMED-ICON
 .sosmed-icon a {
   color: #ffffff;
   background-color: transparent;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   font-size: 18px;
   display: flex;
   justify-content: center;
@@ -1922,7 +1964,7 @@ PRICING TABLE
 /* ==========================
 TESTIMONIALS
 ============================= */
-.testimonial-2 {
+/*.testimonial-2 {
   position: relative;
   margin-bottom: 30px; }
   .testimonial-2 .media {
@@ -2078,7 +2120,7 @@ TESTIMONIALS
   .rs-experience .title {
     color: #00aeef;
     margin-top: 5px; }
-
+*/
 /* ==========================
 BLOG
 ============================= */
@@ -2973,13 +3015,11 @@ Back To Top Section
 /* #frontPractice{
   padding: 40px 0;
 } */
-#testimonials{
+#lawyers{
   background: #eee;
 }
-#testimonials .feedback{
-    padding: 1rem;
-    background: #1b4196;
-    border-radius: .25rem;
+#lawyers img{
+    height: 300px;
 }
 #question,
 .question{
@@ -3054,7 +3094,7 @@ margin-left: auto;
     justify-content: center;
 }
 .zoom {
-  height: 300px;
+  /*height: 300px;*/
   overflow: hidden; 
 }
 
