--- a/css/style.css
+++ b/css/style.css
@@ -1383,7 +1383,7 @@ ICON 2
 .box-icon-1 {
   margin-bottom: 15px;
   text-align: center;
-  padding: 25px;
+  padding: 35px;
   border: 1px solid #D9EBF3;
   box-shadow: 1px 1px 8px 4px #DDD;
   height: 100%; 
@@ -3063,6 +3063,7 @@ Back To Top Section
     max-width: 100%;
     padding-bottom: 1rem;
     border-radius: 1%;
+    height: 400px;
 }
 #attorney .title-section{
     margin: 0px auto 5rem;
